# tauri-workstation-dock

./: README.md  package-lock.json  package.json  vite.config.ts  workstation-dock.projects.md
browser-extension/: background.js  manifest.json  offscreen.html  offscreen.js
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 01_init-schema.sql  02_add_favorites.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  ws_server.rs
src/assets/: main.css
src/components/: DeleteModal.vue  FloatingCommandBar.vue  SearchSortBar.vue  Sidebar.vue  WorkspaceDetails.vue
src/components/Notes/: EditorImageUpload.vue  EditorLinkPopover.vue  NoteEditor.vue  NoteFormModal.vue  index.vue
src/components/Shortcuts/: ShortcutFormModal.vue  index.vue
src/lib/: EditorImageUploadExtension.ts
src/services/: db.ts  notes.service.ts  shortcuts.service.ts  shortcuts.ts  workspaces.service.ts  workspaces.ts
src/stores/: notes.ts  shortcuts.ts  workspaces.ts
